--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "TokenKey": "123Loremipsumdolorsitametconsecteturadipiscingelit seddo eiusmod tempor incididunt ut labore et dolore magna aliqua.,",
   "AllowedHosts": "*"
 }
