ADD Images Upload on Cloudly

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,10 @@
     }
   },
   "TokenKey": "123Loremipsumdolorsitametconsecteturadipiscingelit seddo eiusmod tempor incididunt ut labore et dolore magna aliqua.,",
+  "CloudinarySettings": { 
+    "CloudName": "dizzxoflt",
+    "ApiKey": "725137199261233",
+    "ApiSecret": "usm4NHO4aVabXefcJoRfb9khmDI"
+  },
   "AllowedHosts": "*"
 }
